# drogonapp

./: .gitignore  AGENTS.md  ARHCITECTURE.md  README.md  requirements.txt
backend/: CMakeLists.txt  DirectoryChat.py  analyseData.py  analyseHists.cc  fetchNewCalibrations  fetchNewCalibrations.cc  fetchNewRuns  fetchNewRuns.cc  main.cc  requirements.txt
backend/controllers/: TestCtrl.cc  TestCtrl.h
backend/function_prediction/: config.py  dataHandling.py  makePrediction.py  models.md  plotting.py  predict.py  trainNetwork.py
backend/function_prediction/models/: model.py
backend/include/: constants.h  continuousPredictor.h  controllerBase.h  functions.h  globals.h  serviceLocator.h  workWithDB.h  workWithTrigger.h
backend/react/: asset-manifest.json  index.html
backend/react/static/css/: main.fb5227a4.css
backend/react/static/js/: 787.d8940dfb.chunk.js  main.11d714cc.js
backend/serverData/: fetchSettings.json  globalSettings.json  globalSettings.txt
backend/serverData/function_prediction/: meanValues.txt  meanValuesT.txt  stdValuesT.txt  tempModel.pt  tempModelT.pt  tempModelold.pt  tempModelt.pt  tempModelt1.py  trainresults1.txt
backend/source/: constants.cc  controllerBase.cc  functions.cc  neuralNetwork.cc  workWithDB.cc
backend/static/: index.html  style.css
docs/: repository_restructure_plan.md
reactDevelopment/: package-lock.json  package.json
reactDevelopment/public/: index.html
reactDevelopment/src/: App.css  App.js
reactDevelopment/src/components/: Button.js  MenuHeader.js  PlotlyPlotComp.js  testToggle.js
testDrogonApp/: CMakeLists.txt  analyseHists.cc  analyseHists_cc_ACLiC_dict_rdict.pcm  config.json  diagram.puml  fetchNewCalibrations  fetchNewCalibrations.cc  fetchNewCalibrations_cc_ACLiC_dict_rdict.pcm  fetchNewRuns  fetchNewRuns.cc  main.cc  out.root  outHome.root
testDrogonApp/controllers/: MainController.cc  MainController.h
testDrogonApp/function_prediction/: config.py  dataHandling.py  makePrediction.py  predict.py  randSearchResults.py  trainClassificationTemplate.py  trainNetwork.py
testDrogonApp/function_prediction/models/: model.py
testDrogonApp/include/: controllerBase.h  functions.h  histsUpdater.h  neuralNetwork.h  serverData.h  workWithDB.h  workWithOracleDB.h
testDrogonApp/serverData/: fetchSettings.json  globalSettings.json  globalSettings.txt  testOut.txt
testDrogonApp/serverData/function_prediction/: meanValues.txt  meanValuesT.txt  meanValuesold.txt  predicted.parquet  predicted.txt  predicted1.parquet  predicted1.txt  predicted1Sec1tSepLSTM.txt  predictedSec1tSepLSTM.txt  simu.parquet  simu1.parquet  stdValues.txt  stdValuesT.txt  stdValuesold.txt  tempModel.onnx  tempModel.pt  tempModelBack.onnx  tempModelNew.pt  tempModelT.pt  tempModelold.onnx  tesu.parquet  tesu1.parquet  trainresults1.txt
testDrogonApp/serverData/histLists/: filelist032.list  filelist033.list  filelist034.list  filelist035.list  filelist036.list  filelist037.list  filelist038.list  filelist039.list  filelist040.list  filelist041.list  filelist042.list  filelist043.list  filelist044.list  filelist045.list  filelist046.list  filelist047.list  filelist048.list  filelist049.list  filelist050.list  filelist051.list  filelist052.list  filelist053.list  filelist059.list  filelist060.list  filelist061.list  filelist062.list  filelist063.list  filelist064.list  filelist065.list  filelist066.list  filelist067.list  filelist068.list  filelist59.list  listOfLists.list
testDrogonApp/serverData/nn_input/: Text File.txt
testDrogonApp/serverData/qaHists/: qahists.root
testDrogonApp/source/: constants.cc  continuousPredictor.cc  controllerBase.cc  functions.cc  functions_cc_ACLiC_dict_rdict.pcm  histsUpdater.cc  neuralNetwork.cc  serverData.cc  workWithDB.cc  workWithOracleDB.cc  workWithTrigger.cc
testDrogonApp/static/: handleButtons.js  index.html  mainDisplay.js  sidePannel.js  style.css
